test/pass/27-numeral-casts.perk
import "stdio.h"

fun main () : void {
    let x := 5;
    let y := 5 + .5;

    printf("x: %d, y: %.2f\n", x, y);
}