test/fail/13-arrray_unknown_length.perk
import "stdio.h"

fun f(a: [int]): void {
    printf("Array length: %d\n", a.length);
}